--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
 <body>
   <nav class="upper-nav">
     <ul>
-      <li><a class="logo-btn" href=""><img src="/images/logo-bookmark.svg" alt=""></a></li>
+      <li><a class="logo-btn" href=""><img src="/images/logo-bookmark.svg" alt="logo"></a></li>
       <li><a href="">Features</a></li>
       <li><a href="">Pricing</a></li>
       <li><a href="">Contact</a></li>
       <li><a class="login-btn" href="">Login</a></li>
     </ul>
   </nav>
+  <main>
+    <section class="introduction">
+      <div class="text-wrapper">
+        <h1>A Simple Bookmark<br/> Manager</h1>
+        <p>A clean and simple interface to organise your favourite websites. Open a new
+          browser tab and see your sites load instantly. Try it for free.
+        </p>
+        <div class="buttons-wrapper">
+          <a href="">Get it on Chrome</a>
+          <a href="">Get it on Firefox</a>
+        </div>
+      </div>
+      <div class="image-wrapper">
+        <img src="/images/illustration-hero.svg" alt="hero image">
+      </div>
+    </section>  
+  </main>
 </body>
 </html>
