--- a/index.html
+++ b/index.html
@@ -32,7 +32,33 @@
       <div class="image-wrapper">
         <img src="/images/illustration-hero.svg" alt="hero image">
       </div>
-    </section>  
+    </section>
+    <section class="features">
+      <div class="description">
+        <h2>Features</h2>
+        <p>Our aim is to make it quick and easy for you to access your favourite websites.
+          Your bookmarks sync between your devices so you can access them on the go.
+        </p>
+      </div>
+      <div class="buttons-wrapper">
+        <button class="simple highlight">Simple Bookmarking</button>
+        <button class="speedy">Speedy Searching</button>
+        <button class="easy">Easy Sharing</button>
+      </div>
+      <div class="tab">
+        <div class="image-wrapper">
+          <img src="/images/illustration-features-tab-1.svg" alt="hero image">
+        </div>
+        <div class="text-wrapper">
+          <h1>Bookmark in one click</h1>
+          <p>Organise your bookmarks however you like. Our simple drag-and-drop interface gives you complete
+            control over how you manage your favourite sites.
+          </p>
+          <a href="">More info...</a>
+        </div>
+      </div>
+    </section>
   </main>
+  <script src="/scripts/script.js"></script>
 </body>
 </html>
