Add download section
Download section has been added (HTML + desktop CSS)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,37 @@
         </div>
       </div>
     </section>
+    <section class="download">
+      <div class="description">
+        <h2>Download the extension</h2>
+        <p>We have got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us
+          to prioritize.
+        </p>
+      </div>
+      <div class="browsers-wrapper">
+        <div class="browser">
+          <img class="logo" src="/images/logo-chrome.svg" alt="chrome logo">
+          <h3>Add to Chrome</h3>
+          <p>Minimum version 62</p>
+          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <button>Add & install Extension</button>
+        </div>
+        <div class="browser">
+          <img class="logo" src="/images/logo-firefox.svg" alt="firefox logo">
+          <h3>Add to Firefox</h3>
+          <p>Minimum version 55</p>
+          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <button>Add & install Extension</button>
+        </div>
+        <div class="browser">
+          <img class="logo" src="/images/logo-opera.svg" alt="opera logo">
+          <h3>Add to Opera</h3>
+          <p>Minimum version 46</p>
+          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <button>Add & install Extension</button>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="/scripts/script.js"></script>
 </body>
