Add FAQ section
FAQ Section has been added (HTML + desktop CSS + JS);

--- a/index.html
+++ b/index.html
@@ -89,6 +89,53 @@
         </div>
       </div>
     </section>
+    <section class="faq">
+      <div class="description">
+        <h2>Download the extension</h2>
+        <p>We have got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us
+          to prioritize.
+        </p>
+      </div>
+      <div class="questions-wrapper">
+        <div class="question">
+          <button>
+            <p>What is Bookmark?</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+          </button>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, obcaecati pariatur blanditiis laboriosam sequi harum expedita aliquid labore praesentium distinctio quidem? Ex officiis iure amet aspernatur quibusdam, reprehenderit doloremque ipsam!
+          </p>
+        </div>
+        <div class="question">
+          <button>
+            <p>How can I request a new browser?</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+          </button>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, obcaecati pariatur blanditiis laboriosam sequi harum expedita aliquid labore praesentium distinctio quidem? Ex officiis iure amet aspernatur quibusdam, reprehenderit doloremque ipsam!
+          </p>
+        </div>
+        <div class="question">
+          <button>
+            <p>Is there a mobile app?</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+          </button>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, obcaecati pariatur blanditiis laboriosam sequi harum expedita aliquid labore praesentium distinctio quidem? Ex officiis iure amet aspernatur quibusdam, reprehenderit doloremque ipsam!
+          </p>
+        </div>
+        <div class="question">
+          <button>
+            <p>What about other Chromium browsers?</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+          </button>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, obcaecati pariatur blanditiis laboriosam sequi harum expedita aliquid labore praesentium distinctio quidem? Ex officiis iure amet aspernatur quibusdam, reprehenderit doloremque ipsam!
+          </p>
+        </div>
+      </div>
+      <a class="info" href="">More Info</a>
+    </section>
   </main>
   <script src="/scripts/script.js"></script>
 </body>
