--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
       </div>
       <a class="info" href="">More Info</a>
     </section>
+    <footer>
+      <div class="wrapper">
+        <p><span class="counter"></span>+ already joined</p>
+        <p>Stay up-to-date with what we're doing</p>
+        <form action="">
+          <div class="input-wrapper">
+            <input type="text" placeholder="Enter your email adress">
+          </div>
+          <button class="submit">Contact Us</button>
+        </form>
+      </div>
+    </footer>
   </main>
   <script src="/scripts/script.js"></script>
 </body>
