GH Pages Fix 3.0

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="image-wrapper">
-        <img src="/images/illustration-hero.svg" alt="hero image">
+        <img src="images/illustration-hero.svg" alt="hero image">
       </div>
     </section>
     <section class="features" id="features">
@@ -54,7 +54,7 @@
       </div>
       <div class="tab">
         <div class="image-wrapper">
-          <img src="/images/illustration-features-tab-1.svg" alt="hero image">
+          <img src="images/illustration-features-tab-1.svg" alt="hero image">
         </div>
         <div class="text-wrapper">
           <h3>Bookmark in one click</h3>
@@ -74,24 +74,24 @@
       </div>
       <div class="browsers-wrapper">
         <div class="browser">
-          <img class="logo" src="/images/logo-chrome.svg" alt="chrome logo">
+          <img class="logo" src="images/logo-chrome.svg" alt="chrome logo">
           <h3>Add to Chrome</h3>
           <p>Minimum version 62</p>
-          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <img class="border" src="images/bg-dots.svg" alt="border image">
           <button>Add & install Extension</button>
         </div>
         <div class="browser">
-          <img class="logo" src="/images/logo-firefox.svg" alt="firefox logo">
+          <img class="logo" src="images/logo-firefox.svg" alt="firefox logo">
           <h3>Add to Firefox</h3>
           <p>Minimum version 55</p>
-          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <img class="border" src="images/bg-dots.svg" alt="border image">
           <button>Add & install Extension</button>
         </div>
         <div class="browser">
-          <img class="logo" src="/images/logo-opera.svg" alt="opera logo">
+          <img class="logo" src="images/logo-opera.svg" alt="opera logo">
           <h3>Add to Opera</h3>
           <p>Minimum version 46</p>
-          <img class="border" src="/images/bg-dots.svg" alt="border image">
+          <img class="border" src="images/bg-dots.svg" alt="border image">
           <button>Add & install Extension</button>
         </div>
       </div>
@@ -178,6 +178,6 @@
       <button class="close-modal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="15"><path fill="#FFF" fill-rule="evenodd" d="M8 5.379L13.303.075l2.122 2.122L10.12 7.5l5.304 5.303-2.122 2.122L8 9.62l-5.303 5.304-2.122-2.122L5.88 7.5.575 2.197 2.697.075 8 5.38z"/></svg></button>
     </div>
   </aside>
-  <script src="/scripts/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
